Used in conjunction with options (JexlOptions) and features (JexlFeatures), the permissions (JexlPermissions)
allow fine-tuning the scripting integration into any project.
JEXL 3.3 also adds some syntactic (ECMAScript) features (let, const, =>, for, ...) to further reduce
the skill set required to write scripts.

New Features in 3.3:
====================
* JEXL-382:     Simplify grammar and lexical state management
* JEXL-380:     Multiple values per pragma key
* JEXL-379:     Allow new to use class identifier
* JEXL-373:     Add support for prefix/postfix increment/decrement operators
* JEXL-372:     Add support for 'standard' for loop
* JEXL-369:     Add 'let' and 'const' variable declarations
* JEXL-367:     Named function and fat-arrow (=>) lambda syntax
* JEXL-366:     Fail to evaluate string and number comparison
* JEXL-365:     Lambda expressions
* JEXL-363:     Allow retrieving captured variables in script
* JEXL-360:     Add missing bitshift operators ( >>, >>>, <<)
* JEXL-359:     Allow per-operator arithmetic handling of null arguments
* JEXL-357:     Configure accessible packages/classes/methods/fields

Bugs Fixed in 3.3:
==================
* JEXL-386:     Non-inheritable permissions on interfaces are ignored in an inheritable sandbox
* JEXL-384:     Improve control over JexlArithmetic null argument handling
* JEXL-378:     Incremental operator and decremental operator do not honor the side-effect flag
* JEXL-376:     Introspector captures methods on non-exported classes (modules, java9+)
* JEXL-375:     Cannot access enums by their name when using sandbox
* JEXL-374:     No exception if dereferencing null object using safe(false) and antish(false)
* JEXL-371:     Override of a protected method with public visibility is not callable
* JEXL-370:     Cannot check if variable is defined using ObjectContext if the value is null
* JEXL-368:     Namespace functor resolution is not cached
* JEXL-364:     Evaluator options not propagated in closures