@@ -63,6 +63,7 @@ public final class Parser extends JexlParser
             implicitPackages = new LinkedHashSet(jexlOptions.getImports());
             scope = jexlScope;
             branchScope = new BranchScope();
+            token_source.comparatorNames = jexlFeatures.supportsComparatorNames();
             ReInit(jexlSrc);
             ASTJexlScript script = jexlFeatures.supportsScript()? JexlScript(jexlScope) : JexlExpression(jexlScope);
             script.jjtSetValue(info.detach());
@@ -86,7 +87,9 @@ public final class Parser extends JexlParser
 
 PARSER_END(Parser)
 
-TOKEN_MGR_DECLS : {}
+TOKEN_MGR_DECLS : {
+    boolean comparatorNames = false;
+}
 
 /***************************************
  *     Skip & Number literal tokens
@@ -174,7 +177,7 @@ TOKEN_MGR_DECLS : {}
     | < le : "<=" | "\u2264" >
 }
 
-<DEFAULT> TOKEN : { /* COMPARISONS */
+<NEVER> TOKEN : { /* COMPARISONS */
       < EQ : "eq" >
     | < NE : "ne" >
     | < IN : "in" >
@@ -182,7 +185,10 @@ TOKEN_MGR_DECLS : {}
     | < GE : "ge" >
     | < LT : "lt" >
     | < LE : "le" >
-    | < iof : "instanceof" > : QUALIFIED
+}
+
+<DEFAULT> TOKEN : { /* COMPARISONS */
+      < iof : "instanceof" > : QUALIFIED
     | < niof : "!instanceof" > : QUALIFIED
 }
 
@@ -297,7 +303,20 @@ TOKEN_MGR_DECLS : {}
 
 <DEFAULT> TOKEN : /* IDENTIFIERS */
 {
-  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>|<ESCAPE>)* > { matchedToken.image = StringParser.unescapeIdentifier(matchedToken.image); }
+  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>|<ESCAPE>)* >
+  {
+      matchedToken.image = StringParser.unescapeIdentifier(matchedToken.image);
+      if (comparatorNames && matchedToken.image.length() == 2) {
+          switch (matchedToken.image) {
+             case "ne" : matchedToken.kind = NE; break;
+             case "eq" : matchedToken.kind = EQ; break;
+             case "lt" : matchedToken.kind = LT; break;
+             case "le" : matchedToken.kind = LE; break;
+             case "gt" : matchedToken.kind = GT; break;
+             case "ge" : matchedToken.kind = GE; break;
+          }
+      }
+  }
   |
   < #LETTER: [ "a"-"z", "A"-"Z", "_", "$", "@" ] >
   |
