@@ -40,6 +40,7 @@ the skill set required to write scripts.
 
 New Features in 3.3:
 ====================
+* JEXL-385:     Support disabling fortran-style relational operators syntax
 * JEXL-382:     Simplify grammar and lexical state management
 * JEXL-380:     Multiple values per pragma key
 * JEXL-379:     Allow new to use class identifier
